--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.32",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.7.2",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
@@ -27,6 +28,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
+    "sqlite3": "^5.1.7",
     "swiper": "^9.3.2",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
