--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
+    "sqlite3": "^5.1.7",
     "swiper": "^9.3.2",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
