--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,20 @@
     {
       "src": "api/main.go",
       "use": "@vercel/go"
+    },
+    {
+      "src": "./next.config.js",
+      "use": "@vercel/next"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
       "dest": "/api/main.go"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "./$1"
     }
   ]
 }
